@@ -1,3 +1,3 @@
 let ocaml_version = "3.11"
-let ast_impl_magic_number = "Caml1999M011"
-let ast_intf_magic_number = "Caml1999N010"
+let ast_impl_magic_number = "Caml1999M012"
+let ast_intf_magic_number = "Caml1999N011"
